--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manage | Landing page</title>
     <link href="css/main.css" rel="stylesheet">
+    <link href="input.css" rel="stylesheet">
+   
 </head>
 <body>
     <!-- Navbar styling -->
@@ -25,6 +27,23 @@
             </div>
             <!-- get started button here -->
             <a href="#" class="hidden font-bold text-white p-3 px-6 pt-2 bg-brightRed md:block rounded-full baseline hover:bg-brightRedLight">Get Started</a>
+
+            <!-- hamburger icon -->
+            <button id="menu-btn" class="block hamburger md:hidden focus:outline:none">
+                <span class="hamburger-top"></span>
+                <span class="hamburger-middle"></span>
+                <span class="hamburger-bottom"></span>
+            </button>
+        </div>
+        <!-- Mobile Menu -->
+        <div class="md:hidden">
+            <div id="menu" class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:self-center left-6 right-6 drop-shadow-md">
+            <a href="#">Pricing</a>
+            <a href="#">Product</a>
+            <a href="#">About Us</a>
+            <a href="#">Careers</a>
+            <a href="#">Community</a>
+            </div>
         </div>
     </nav>
     <!-- Hero section here -->
@@ -54,7 +73,7 @@
         <!-- flex-container -->
         <div class="container flex flex-col items-center px-6 mx-auto mt-10 space-y-12 md:space-y-0 md:flex-row">
             <!-- left item -->
-            <div class="flex flex-col space-y-12 md:w-1/2">
+            <div class="flex flex-col space-y-12 md:w-1/2 md:mb-64">
                 <h1 class="max-w-md text-4xl font-bold text-center md:text-left">
                     What’s different about Manage?
                 </h1>
@@ -68,24 +87,166 @@
                 <div class="flex flex-col space-y-3 md:space-y-0 md:flex-row">
                     <div class="rounded-l-full bg-brightRedSupLight py-0 md:bg-transparent">
                         <div class="flex items-center space-x-2">
-                            <div class="text-white rounded-full text-xl px-4 py-1 font-bold bg-brightRed">01</div>
-                            <h3 class="font-bold text-base p-2 max-w-md md:text-2xl md:mb-1 ">Track company-wide progress</h3>
+                            <div class="px-4 py-2 font-bold text-white rounded-full md:py-1 bg-brightRed">01</div>
+                            <h3 class="text-base font-bold md:mb-4 md:hidden">Track company-wide progress</h3>
                         </div>
-
                     </div>
                     <div>
+                        <h3 class="hidden mb-4 mx-4 text-lg font-bold md:block">
+                            Track company-wide progress
+                        </h3>
                         <p class="text-darkGrayishBlue">
                           See how your day-to-day tasks fit into the wider vision. Go from
                           tracking progress at the milestone level all the way done to the
                           smallest of details. Never lose sight of the bigger picture
                           again.
                         </p>
-                      </div>
-            
+                    </div>
+               </div>
+
+               <!-- List item2 -->
+               <div class="flex flex-col space-y-3 md:space-y-0 md:flex-row">
+                    <div class="rounded-l-full bg-brightRedSupLight py-0 md:bg-transparent">
+                        <div class="flex items-center space-x-2">
+                            <div class="px-4 py-2 font-bold text-white rounded-full md:py-1 bg-brightRed">02</div>
+                            <h3 class="text-base font-bold md:mb-4 md:hidden">Advanced built-in reports</h3>
+                        </div>
+                    </div>
+                    <div>
+                        <h3 class="hidden mb-4 mx-4 text-lg font-bold md:block">
+                            Advanced built-in reports
+                        </h3>
+                        <p class="text-darkGrayishBlue">
+                            Set internal delivery estimates and track progress toward company goals. Our customisable dashboard helps you build out the reports you need to keep key stakeholders informed.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- List item3 -->
+               <div class="flex flex-col space-y-3 md:space-y-0 md:flex-row">
+                <div class="rounded-l-full bg-brightRedSupLight py-0 md:bg-transparent">
+                    <div class="flex items-center space-x-2">
+                        <div class="px-4 py-2 font-bold text-white rounded-full md:py-1 bg-brightRed">03</div>
+                        <h3 class="text-base font-bold md:mb-4 md:hidden">Everything you need in one place</h3>
+                    </div>
+                </div>
+                <div>
+                    <h3 class="hidden mb-4 mx-4 text-lg font-bold md:block">
+                        Everything you need in one place
+                    </h3>
+                    <p class="text-darkGrayishBlue">
+                        Stop jumping from one service to another to communicate, store files, track tasks and share documents. Manage offers an all-in-one team productivity solution.
+                    </p>
                 </div>
             </div>
+            </div>  
         </div>
-
     </section>
+    <!-- Testimonials -->
+    <section id="testimonials">
+        <div class="max-w-6xl px-5 mx-auto mt-32 text-center">
+            <h2 class="text-4xl font-bold text-center">
+                What they’ve said
+            </h2>
+            <!-- Testimonials container -->
+            <div class="flex flex-col mt-24 md:flex-row md:space-x-6">
+                <!-- Testimonial-1 -->
+                <div class="flex flex-col items-center p-6 my-3 space-y-6 rounded-lg bg-veryLightGray md:w-1/3">
+                    <img src="img/avatar-anisha.png" alt="person1 image"/>
+                    <h5 class="text-lg font-bold">Anisha Li</h5>
+                    <p class="text-darkGrayishBlue">“Manage has supercharged our team’s workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated.”</p>
+                </div>
+                <!-- Testimonial-2 -->
+                <div class="flex flex-col items-center p-6 my-3 space-y-6 rounded-lg bg-veryLightGray md:w-1/3">
+                    <img src="img/avatar-ali.png" alt="person2 image"/>
+                    <h5 class="text-lg font-bold">Ali Bravo</h5>
+                    <p class="text-darkGrayishBlue">“We have been able to cancel so many other subscriptions since using Manage. There is no more cross-channel confusion and everyone is much more focused.”</p>
+                </div>
+                <!-- Testimonial-3 -->
+                <div class="flex flex-col items-center p-6 my-3 space-y-6 rounded-lg bg-veryLightGray md:w-1/3">
+                    <img src="img/avatar-richard.png" alt="person3 image"/>
+                    <h5 class="text-lg font-bold">Richard Watts</h5>
+                    <p class="text-darkGrayishBlue">“Manage allows us to provide structure and process. It keeps us organized and focused. I can’t stop recommending them to everyone I talk to!”</p>
+                </div>
+            </div>
+            <!-- Get started button -->
+            <div class="flex justify-center my-16 md:justify-center">
+                <a href="#" class="font-bold text-white p-3 px-6 pt-2 bg-brightRed rounded-full baseline hover:bg-brightRedLight">Get Started</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- CTA Section -->
+    <section id="cta" class="bg-brightRed">
+        <div class="container flex flex-col items-center px-6 py-24 mx-auto text-white justify-between space-y-12 md:py-12 md:flex-row md:space-y-0">
+            <h2 class="text-5xl font-bold leading-tight text-center text-white md:text-4xl md:max-w-xl md:text-left">Simplify how your team works today</h2>
+            <!-- Get started button -->
+            <div class="flex justify-center my-3 md:justify-center">
+                <a href="#" class="font-bold text-brightRed p-3 px-6 pt-2 bg-white rounded-full baseline hover:bg-brightRedSupLight">Get Started</a>
+            </div>
+        </div>
+    </section>
+    <!-- Footer section -->
+    <footer class="bg-veryDarkBlue">
+        <div class="container flex flex-col-reverse justify-between px-6 py-10 mx-auto space-y-8 md:flex-row md:space-y-0">
+            <!-- logo and social links here -->
+            <div class="flex flex-col-reverse items-center justify-between space-y-12 md:flex-col md:space-y-0 md:items-start">
+                <div class="text-white mx-auto pt-4 text-center md:hidden">
+                    Copyright &copy; 2022, Made with &hearts; by <span class="text-brightRed">Sabiya</span>
+                </div>
+                <!-- logo -->
+                <div>
+                    <img src="img/logo-white.svg" class="h-8" alt="" />
+                </div>
+            
+                <!-- social links  -->
+                <div class="flex justify-center space-x-4">
+                    <a href="#">
+                        <img src="img/icon-facebook.svg" alt="facebook icon" class="h-6"/>
+                    </a>
+                    <a href="#">
+                        <img src="img/icon-youtube.svg" alt="youtube icon" class="h-6"/>
+                    </a>
+                    <a href="#">
+                        <img src="img/icon-twitter.svg" alt="twitter icon" class="h-6"/>
+                    </a>
+                    <a href="#">
+                        <img src="img/icon-pinterest.svg" alt="pinterest icon" class="h-6"/>
+                    </a>
+                    <a href="#">
+                        <img src="img/icon-instagram.svg" alt="instagram icon" class="h-6"/>
+                    </a>
+
+                </div>
+            </div>
+        <!-- lists -->
+        <div class="flex justify-around space-x-32">
+            <div class="flex flex-col space-y-3 text-white">
+              <a href="#" class="hover:text-brightRed">Home</a>
+              <a href="#" class="hover:text-brightRed">Pricing</a>
+              <a href="#" class="hover:text-brightRed">Products</a>
+              <a href="#" class="hover:text-brightRed">About</a>
+            </div>
+            <div class="flex flex-col space-y-3 text-white">
+              <a href="#" class="hover:text-brightRed">Careers</a>
+              <a href="#" class="hover:text-brightRed">Community</a>
+              <a href="#" class="hover:text-brightRed">Privacy Policy</a>
+            </div>
+        </div>
+        <!-- input box -->
+        <div class="flex flex-col justify-between">
+            <form>
+                <div class="flex space-x-3">
+                    <input type="text" class="flex-1 px-4 rounded-full focus:outline-none" placeholder="Updates in your box"/>
+                    <button class="px-6 py-2 text-white rounded-full bg-brightRed hover:bg-brightRedLight focus:outline-none">Go</button>
+                </div>
+            </form>
+            <div class="hidden text-white md:block">
+                Copyright &copy; 2022, Made with &hearts; by <span class="text-brightRed">Sabiya</span>
+            </div>
+        </div>
+       </div>
+    </footer>
+    <script src="js/script.js"></script>
 </body>
 </html>
